# gasflow_firmware

./: CMakeLists.txt  README.md  todo.org  west.yml
.github/workflows/: build.yml
app/: CMakeLists.txt  Kconfig  prj.conf
bnct-app/: CMakeLists.txt  app.overlay  prj.conf
bnct-app/src/: bmp280.c  common.h  mfc_acu20fd.c  modbus.c  modbus_ifc.h  mode.c  pump.c  registers.c  status.c  valve.c
dts/bindings/: pwm-pump.yaml
include/gasflow/: acu20fd.h
include/iterables/: callback.h  iterables_ram.ld  register.h
lib/: CMakeLists.txt  Kconfig  acu20fd.c
